tests/NormalTests/paczka1/small_fuzzy/68776312.err
Error in line 5: wPQ4zpW77 S340 29,14
Error in line 1: 5FqN4z A539 95,6
Error in line 2: wPQ4zpW77 A636 25,9
Error in line 12: S19a {636 10,1
Error in line 3: tpilAv A662 25,5
Error in line 8: wPQ4zpW77 S340 69,4
